--- a/src/fxml/admin_choice.fxml
+++ b/src/fxml/admin_choice.fxml
@@ -19,7 +19,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="806.0" prefWidth="310.0" style="-fx-background-color: opaque; -fx-background-insets: opaque;">
                <children>
-                  <Label fx:id="employee" layoutX="14.0" layoutY="253.0" onMouseClicked="#handleemployee_infoAction" prefHeight="51.0" prefWidth="301.0" text="Employee_info" textFill="#861111">
+                  <Label fx:id="babysitter" layoutX="14.0" layoutY="253.0" onMouseClicked="#handleemployee_infoAction" prefHeight="51.0" prefWidth="301.0" text="Employee_info" textFill="#861111">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
