--- a/src/fxml/Welcome_page.fxml
+++ b/src/fxml/Welcome_page.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.welcome_page">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D7F6D4;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.welcome_page">
    <children>
       <ImageView fitHeight="1000" fitWidth="1960.0" layoutX="-2.0" layoutY="5.0" opacity="0.83">
          <image>
