--- a/src/fxml/Baby_sitterBooking.fxml
+++ b/src/fxml/Baby_sitterBooking.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFDAB9;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.BabySitterBooking">
+<AnchorPane prefHeight="998.0" prefWidth="2000" style="-fx-background-color: #FFDAB9;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Baby_sitterBooking">
    <children>
       <Label layoutX="140.0" layoutY="21.0" text="Start Your Booking Now !">
          <font>
