--- a/src/fxml/Booking_sitter.fxml
+++ b/src/fxml/Booking_sitter.fxml
@@ -36,18 +36,43 @@
                         <Image url="@../resources/-_Home-House--128.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="21.0" layoutY="405.0">
+                  <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="21.0" layoutY="465.0">
                      <image>
                         <Image url="@../resources/setting-128.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="56.0" fitWidth="48.0" layoutX="25.0" layoutY="482.0">
+                  <ImageView fitHeight="56.0" fitWidth="48.0" layoutX="25.0" layoutY="521.0">
                      <image>
                         <Image url="@../resources/free-18-512.png" />
                      </image>
                   </ImageView>
+                  <Label layoutX="94.0" layoutY="296.0" text="Show Sitters" textFill="#491897">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="97.0" layoutY="229.0" text="Home Page" textFill="#491897">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="94.0" layoutY="361.0" text="show Rating" textFill="#491897">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="88.0" layoutY="486.0" text="Settings" textFill="#491897">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="88.0" layoutY="539.0" text="Help &amp; feedback" textFill="#491897">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                  </Label>
                </children></AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="998.0" prefWidth="53.0">
+          <AnchorPane fx:id="switchpane" minHeight="0.0" minWidth="0.0" prefHeight="998.0" prefWidth="53.0">
                <children>
                   <ImageView fx:id="home_choice" fitHeight="46.0" fitWidth="48.0" onMouseClicked="#home_choiceHandler">
                      <image>
