--- a/src/fxml/Booking_sitter.fxml
+++ b/src/fxml/Booking_sitter.fxml
@@ -11,9 +11,9 @@
 <AnchorPane prefHeight="1000.0" prefWidth="1960.0" style="-fx-background-color: \\;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Booking_sitter">
    <children>
      
-      <SplitPane fx:id="pane1" dividerPositions="0.15889287544848796" layoutX="1.0" prefHeight="1000.0" prefWidth="1953.0">
+      <SplitPane fx:id="pane1" dividerPositions="0.1619682214249103" layoutX="1.0" onMouseClicked="#home_choiceHandler" prefHeight="1000.0" prefWidth="1953.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="605.0" prefWidth="138.0" style="-fx-background-color: #FFDAB9;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" onMouseClicked="#home_choiceHandler2" prefHeight="605.0" prefWidth="138.0" style="-fx-background-color: #FFDAB9;">
                <children>
                   <Label layoutX="21.0" layoutY="163.0" opacity="0.49" prefHeight="720.0" prefWidth="264.0" style="-fx-background-color: #90EE90; -fx-background-radius: 30.30;" />
                   <Label layoutX="2.0" layoutY="14.0" prefHeight="24.0" prefWidth="306.0" text="Your Best Choice is here Get Ready !" textFill="#272d79">
@@ -21,27 +21,17 @@
                         <Font name="Arial" size="18.0" />
                      </font>
                   </Label>
-                  <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="21.0" layoutY="339.0">
-                     <image>
-                        <Image url="@../resources/Survey_rating_rate-37-128.png" />
-                     </image>
-                  </ImageView>
                   <ImageView fx:id="start" fitHeight="56.0" fitWidth="56.0" layoutX="21.0" layoutY="268.0" onMouseClicked="#startHandler">
                      <image>
                         <Image url="@../resources/woman-reading-256.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="46.0" fitWidth="48.0" layoutX="25.0" layoutY="206.0">
-                     <image>
-                        <Image url="@../resources/-_Home-House--128.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="21.0" layoutY="465.0">
+                  <ImageView fx:id="settings" fitHeight="56.0" fitWidth="56.0" layoutX="21.0" layoutY="465.0" onMouseClicked="#settingsHandler">
                      <image>
                         <Image url="@../resources/setting-128.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="56.0" fitWidth="48.0" layoutX="25.0" layoutY="521.0">
+                  <ImageView fx:id="help" fitHeight="56.0" fitWidth="48.0" layoutX="25.0" layoutY="521.0" onMouseClicked="#helpHandler">
                      <image>
                         <Image url="@../resources/free-18-512.png" />
                      </image>
@@ -71,6 +61,12 @@
                         <Font name="System Bold" size="17.0" />
                      </font>
                   </Label>
+                  <ImageView fx:id="home" fitHeight="46.0" fitWidth="62.0" layoutX="25.0" layoutY="211.0" onMouseClicked="#loginpageHandler">
+                     <image>
+                        <Image url="@../resources/home-animated-pastels.gif" />
+                     </image>
+                  </ImageView>
+
                </children></AnchorPane>
           <AnchorPane fx:id="switchpane" minHeight="0.0" minWidth="0.0" prefHeight="998.0" prefWidth="53.0">
                <children>
