--- a/src/fxml/Sign_up_parent.fxml
+++ b/src/fxml/Sign_up_parent.fxml
@@ -34,7 +34,7 @@
             </font>
         </Label>
 
-        <VBox layoutX="210.0" layoutY="166.0" opacity="0.65" prefHeight="582.0" prefWidth="407.0" style="-fx-background-color: white; -fx-background-radius: 40,40;" AnchorPane.bottomAnchor="260.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="1305.0" AnchorPane.topAnchor="166.0">
+        <VBox layoutX="184.0" layoutY="166.0" opacity="0.65" prefHeight="622.0" prefWidth="466.0" style="-fx-background-color: white; -fx-background-radius: 40,40;" AnchorPane.bottomAnchor="220.0" AnchorPane.leftAnchor="184.0" AnchorPane.rightAnchor="1272.0" AnchorPane.topAnchor="166.0">
             <children>
                 <Label fx:id="no_fname" prefHeight="21.0" prefWidth="266.0">
                     <VBox.margin>
@@ -77,7 +77,13 @@
                     </VBox.margin>
                 </TextField>
                 <Label fx:id="no_location" layoutX="10.0" layoutY="10.0" prefHeight="21.0" prefWidth="253.0" />
-                <TextField fx:id="location" layoutX="18.0" layoutY="300.0" promptText="Location" style="-fx-background-radius: 20,30;">
+            <TextField fx:id="num" promptText="address" style="-fx-background-radius: 20,30;">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </VBox.margin>
+            </TextField>
+            <Label prefHeight="21.0" prefWidth="189.0" />
+                <TextField fx:id="location" layoutX="18.0" layoutY="300.0" prefHeight="66.0" prefWidth="414.0" promptText="Location" style="-fx-background-radius: 20,30;">
                     <VBox.margin>
                         <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                     </VBox.margin>
@@ -91,7 +97,7 @@
             </children>
         </VBox>
         <!--<EmojiOneView fx:id="back" fill="#2c52fb" glyphName="BACK" layoutX="14.0" layoutY="30.0" onMouseClicked="#backevent" size="30" strokeType="OUTSIDE" strokeWidth="0.0" />-->
-        <Button fx:id="Continue" alignment="CENTER" cache="true" cacheHint="QUALITY" layoutX="343.0" layoutY="764.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onAction="#continueHandleEvent" prefHeight="38.0" prefWidth="147.0" style="-fx-background-radius: 16.4, 15;" text="CONTINUE" textFill="#11576b" textOverrun="LEADING_ELLIPSIS">
+        <Button fx:id="Continue" alignment="CENTER" cache="true" cacheHint="QUALITY" layoutX="357.0" layoutY="788.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onAction="#continueHandleEvent" prefHeight="38.0" prefWidth="147.0" style="-fx-background-radius: 16.4, 15;" text="CONTINUE" textFill="#11576b" textOverrun="LEADING_ELLIPSIS">
             <!--<effect>-->
             <!--<Lighting>-->
             <!--<bumpInput>-->
