--- a/src/fxml/Booking_sitter.fxml
+++ b/src/fxml/Booking_sitter.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.effect.Blend?>
@@ -10,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="1000.0" prefWidth="1960.0" style="-fx-background-color: \\;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Booking_sitter">
+<AnchorPane fx:id="container" prefHeight="1000.0" prefWidth="1960.0" style="-fx-background-color: \\;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Booking_sitter">
    <children>
      
       <SplitPane fx:id="pane1" dividerPositions="0.1619682214249103" layoutX="1.0" onMouseClicked="#home_choiceHandler" prefHeight="1000.0" prefWidth="1953.0">
@@ -48,11 +46,6 @@
                         <Font name="System Bold" size="17.0" />
                      </font>
                   </Label>
-                  <Label layoutX="94.0" layoutY="361.0" text="show Rating" textFill="#491897">
-                     <font>
-                        <Font name="System Bold" size="17.0" />
-                     </font>
-                  </Label>
                   <Label layoutX="88.0" layoutY="486.0" text="Settings" textFill="#491897">
                      <font>
                         <Font name="System Bold" size="18.0" />
@@ -80,8 +73,6 @@
                         <Blend />
                      </effect>
                   </ImageView>
-                  <DatePicker fx:id="datePicker" layoutX="144.0" layoutY="287.0" />
-                  <Button layoutX="221.0" layoutY="375.0" mnemonicParsing="false" onAction="#submit" text="Button" />
                </children></AnchorPane>
         </items>
       </SplitPane>
