--- a/src/fxml/Client_info.fxml
+++ b/src/fxml/Client_info.fxml
@@ -14,13 +14,14 @@
         <columns>
             <TableColumn fx:id="client_image" prefWidth="79.0" text="Image" />
           <TableColumn fx:id="client_id" prefWidth="73.00001525878906" text="Client_id" />
-          <TableColumn fx:id="client_fname" onEditCommit="#updatefNameHandler" prefWidth="127.0" text="Client_FirstName" />
-            <TableColumn fx:id="client_lname" onEditCommit="#updatelNameHandler" prefWidth="137.0" text="Client_LastName" />
-            <TableColumn fx:id="client_email" minWidth="0.0" onEditCommit="#updateemailHandler" prefWidth="137.0" text="Email" />
-            <TableColumn fx:id="client_pass" minWidth="6.0" onEditCommit="#updatepassHandler" prefWidth="117.0" text="Password" />
-            <TableColumn fx:id="client_phonenum" onEditCommit="#updatephonenumHandler" prefWidth="147.0" text="phoneNum" />
+          <TableColumn fx:id="client_fname" onEditCommit="#updatefNameHandler" prefWidth="127.0" text="Client UserName" />
+            <TableColumn fx:id="client_lname" onEditCommit="#updatelNameHandler" prefWidth="137.0" text="ClientEmail" />
+            <TableColumn fx:id="client_email" minWidth="0.0" onEditCommit="#updateemailHandler" prefWidth="137.0" text="ClientPass" />
+            <TableColumn prefWidth="114.0" text="ClientName" />
+            <TableColumn fx:id="client_phonenum" onEditCommit="#updatephonenumHandler" prefWidth="108.0" text="phoneNum" />
+            <TableColumn prefWidth="75.0" text="Birthdate" />
             <TableColumn fx:id="client_gender" minWidth="0.0" onEditCommit="#updategenderHandler" prefWidth="93.0" text="Gender" />
-            <TableColumn fx:id="client_location" onEditCommit="#updatelocationHandler" prefWidth="122.0" text="Location" />
+            <TableColumn fx:id="client_location" onEditCommit="#updatelocationHandler" prefWidth="122.0" text="address" />
         </columns>
       </TableView>
       <Button fx:id="search" layoutX="730.0" layoutY="122.0" mnemonicParsing="false" onKeyReleased="#searchclient" prefHeight="33.0" prefWidth="37.0" style="-fx-background-radius: 30,30;" text="s" textFill="#20b2aa">
@@ -29,7 +30,7 @@
          </font>
       </Button>
       <TextField layoutX="767.0" layoutY="123.0" onKeyReleased="#searchclient" prefHeight="31.0" prefWidth="268.0" />
-      <HBox layoutX="232.0" layoutY="66.0" prefHeight="131.0" prefWidth="456.0">
+      <HBox layoutX="232.0" layoutY="66.0" prefHeight="93.0" prefWidth="456.0">
          <children>
             <Button mnemonicParsing="false" onAction="#deleteClient" prefHeight="31.0" prefWidth="148.0" style="-fx-background-radius: 14,15;" text="Remove_Client" textFill="LIGHTSEAGREEN">
                <font>
