--- a/src/fxml/Sign_up_Employee.fxml
+++ b/src/fxml/Sign_up_Employee.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -14,7 +13,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="switch_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1009.0" prefWidth="1995.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.sign_up_Babysitter_Controller">
+<AnchorPane fx:id="switch_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1009.0" prefWidth="1995.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.sign_up_Employee_Controller">
     <children>
       <ImageView fitHeight="1000" fitWidth="1960.0" layoutY="5.0" opacity="0.51">
          <image>
@@ -69,13 +68,13 @@
                     </VBox.margin>
                 </TextField>
             <Label fx:id="no_birthdate" layoutX="10.0" layoutY="360.0" prefHeight="21.0" prefWidth="258.0" />
-            <DatePicker fx:id="birthdate" promptText="enter your birth date">
-               <VBox.margin>
-                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-               </VBox.margin>
-            </DatePicker>
+                <TextField fx:id="birthdate" promptText="BirthDate" style="-fx-background-radius: 20,30;">
+                    <VBox.margin>
+                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                    </VBox.margin>
+                </TextField>
             <Label fx:id="no_location" layoutX="10.0" layoutY="10.0" prefHeight="21.0" prefWidth="253.0" />
-            <TextField fx:id="location" layoutX="18.0" layoutY="300.0" promptText="address" style="-fx-background-radius: 20,30;">
+            <TextField fx:id="location" layoutX="18.0" layoutY="300.0" promptText="Location" style="-fx-background-radius: 20,30;">
                <VBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </VBox.margin>
@@ -87,6 +86,11 @@
                </VBox.margin>
             </ComboBox>
             <Label fx:id="no_service" layoutX="10.0" layoutY="10.0" prefHeight="21.0" prefWidth="172.0" />
+            <ComboBox fx:id="service" editable="true" prefWidth="150.0" promptText="Service Type">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </VBox.margin>
+            </ComboBox>
             </children>
         </VBox>
         <Circle fill="WHITE" layoutX="1647.0" layoutY="122.0" radius="70.0" stroke="#f2eded" strokeType="INSIDE" />
