--- a/src/fxml/Booking_sitter.fxml
+++ b/src/fxml/Booking_sitter.fxml
@@ -11,52 +11,52 @@
 <AnchorPane fx:id="container" prefHeight="1000.0" prefWidth="1960.0" style="-fx-background-color: \\;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Booking_sitter">
    <children>
      
-      <SplitPane fx:id="pane1" dividerPositions="0.1619682214249103" layoutX="1.0" onMouseClicked="#home_choiceHandler" prefHeight="1000.0" prefWidth="1953.0">
+      <SplitPane fx:id="pane1" dividerPositions="0.0020502306509482316" layoutX="1.0" onMouseClicked="#home_choiceHandler" prefHeight="1000.0" prefWidth="1953.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" onMouseClicked="#home_choiceHandler2" prefHeight="605.0" prefWidth="138.0" style="-fx-background-color: #FFDAB9;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" onMouseClicked="#home_choiceHandler2" prefHeight="998.0" prefWidth="237.0" style="-fx-background-color: #FFDAB9;">
                <children>
-                  <Label layoutX="21.0" layoutY="163.0" opacity="0.49" prefHeight="720.0" prefWidth="264.0" style="-fx-background-color: #90EE90; -fx-background-radius: 30.30;" />
-                  <Label layoutX="2.0" layoutY="14.0" prefHeight="24.0" prefWidth="306.0" text="Your Best Choice is here Get Ready !" textFill="#272d79">
+                  <Label layoutX="39.0" layoutY="124.0" opacity="0.49" prefHeight="720.0" prefWidth="264.0" style="-fx-background-color: #90EE90; -fx-background-radius: 30.30;" />
+                  <Label layoutY="14.0" prefHeight="24.0" prefWidth="350.0" text="Your Best Choice is here Get Ready !" textFill="#272d79">
                      <font>
-                        <Font name="Arial" size="18.0" />
+                        <Font name="Arial Bold" size="19.0" />
                      </font>
                   </Label>
-                  <ImageView fx:id="start" fitHeight="56.0" fitWidth="56.0" layoutX="21.0" layoutY="268.0" onMouseClicked="#startHandler">
+                  <ImageView fx:id="start" fitHeight="56.0" fitWidth="56.0" layoutX="39.0" layoutY="229.0" onMouseClicked="#startHandler">
                      <image>
                         <Image url="@../resources/woman-reading-256.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="settings" fitHeight="56.0" fitWidth="56.0" layoutX="21.0" layoutY="465.0" onMouseClicked="#settingsHandler">
+                  <ImageView fx:id="settings" fitHeight="56.0" fitWidth="56.0" layoutX="39.0" layoutY="426.0" onMouseClicked="#settingsHandler">
                      <image>
                         <Image url="@../resources/setting-128.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="help" fitHeight="56.0" fitWidth="48.0" layoutX="25.0" layoutY="521.0" onMouseClicked="#helpHandler">
+                  <ImageView fx:id="help" fitHeight="56.0" fitWidth="48.0" layoutX="43.0" layoutY="482.0" onMouseClicked="#helpHandler">
                      <image>
                         <Image url="@../resources/free-18-512.png" />
                      </image>
                   </ImageView>
-                  <Label layoutX="94.0" layoutY="296.0" text="Show Sitters" textFill="#491897">
+                  <Label layoutX="112.0" layoutY="257.0" text="Show Sitters" textFill="#491897">
                      <font>
                         <Font name="System Bold" size="17.0" />
                      </font>
                   </Label>
-                  <Label layoutX="97.0" layoutY="229.0" text="Home Page" textFill="#491897">
+                  <Label layoutX="115.0" layoutY="190.0" text="Home Page" textFill="#491897">
                      <font>
                         <Font name="System Bold" size="17.0" />
                      </font>
                   </Label>
-                  <Label layoutX="88.0" layoutY="486.0" text="Settings" textFill="#491897">
+                  <Label layoutX="106.0" layoutY="447.0" text="Settings" textFill="#491897">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="88.0" layoutY="539.0" text="Help &amp; feedback" textFill="#491897">
+                  <Label layoutX="106.0" layoutY="500.0" text="Help &amp; feedback" textFill="#491897">
                      <font>
                         <Font name="System Bold" size="17.0" />
                      </font>
                   </Label>
-                  <ImageView fx:id="home" fitHeight="46.0" fitWidth="62.0" layoutX="25.0" layoutY="211.0" onMouseClicked="#loginpageHandler">
+                  <ImageView fx:id="home" fitHeight="46.0" fitWidth="62.0" layoutX="43.0" layoutY="172.0" onMouseClicked="#loginpageHandler">
                      <image>
                         <Image url="@../resources/home-animated-pastels.gif" />
                      </image>
