--- a/src/fxml/Sign_up_parent.fxml
+++ b/src/fxml/Sign_up_parent.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -41,13 +42,13 @@
                         <Insets />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="fname" promptText="First Name" style="-fx-background-radius: 20,30;">
+                <TextField fx:id="fname" promptText="username" style="-fx-background-radius: 20,30;">
                     <VBox.margin>
                         <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                     </VBox.margin>
                 </TextField>
                 <Label fx:id="no_lname" layoutX="10.0" layoutY="125.0" prefHeight="21.0" prefWidth="264.0" />
-                <TextField fx:id="Lname" promptText="Last Name" style="-fx-background-radius: 20,30;">
+                <TextField fx:id="Lname" promptText="name" style="-fx-background-radius: 20,30;">
                     <VBox.margin>
                         <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                     </VBox.margin>
@@ -65,7 +66,7 @@
                     </VBox.margin>
                 </PasswordField>
                 <Label fx:id="no_pass2" layoutX="10.0" layoutY="266.0" prefHeight="21.0" prefWidth="274.0" />
-                <PasswordField fx:id="confirm_pass" promptText="confirm Password(Min 6 characters)" style="-fx-background-radius: 20,30;">
+                <PasswordField fx:id="confirm_pass" promptText="address" style="-fx-background-radius: 20,30;">
                     <VBox.margin>
                         <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                     </VBox.margin>
@@ -77,11 +78,11 @@
                     </VBox.margin>
                 </TextField>
                 <Label fx:id="no_location" layoutX="10.0" layoutY="10.0" prefHeight="21.0" prefWidth="253.0" />
-                <TextField fx:id="location" layoutX="18.0" layoutY="300.0" promptText="Location" style="-fx-background-radius: 20,30;">
-                    <VBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                    </VBox.margin>
-                </TextField>
+            <DatePicker fx:id="date" promptText="birthdate">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </VBox.margin>
+            </DatePicker>
                 <Label fx:id="no_gender" layoutX="10.0" layoutY="78.0" prefHeight="21.0" prefWidth="196.0" />
                 <ComboBox fx:id="gender" editable="true" prefHeight="31.0" prefWidth="120.0" promptText="Gender">
                     <VBox.margin>
