--- a/src/fxml/AdminPage.fxml
+++ b/src/fxml/AdminPage.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="container" prefHeight="585.0" prefWidth="840.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin_choice_Controller">
+<AnchorPane fx:id="container" prefHeight="585.0" prefWidth="840.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AdminPage">
    <children>
       <ImageView fitHeight="1000" fitWidth="2000.0" opacity="0.6">
          <image>
