--- a/src/fxml/ChangePassword.fxml
+++ b/src/fxml/ChangePassword.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.change_pass_controller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ChangePassword">
    <children>
       <TitledPane animated="false" layoutX="-2.0" layoutY="-1.0" prefHeight="400.0" prefWidth="600.0" text="Change Password" textFill="#eb3285">
         <content>
