--- a/src/fxml/HelpAndFeedback.fxml
+++ b/src/fxml/HelpAndFeedback.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="998.0" prefWidth="2000" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.help_feedback_controller">
+<AnchorPane prefHeight="998.0" prefWidth="2000" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HelpAndFeedback">
    <children>
       <TitledPane animated="false" prefHeight="998.0" prefWidth="2000" text="                                                                                                               Help" textAlignment="CENTER" textFill="#eb3285">
         <content>
