--- a/src/fxml/PaymentMethod.fxml
+++ b/src/fxml/PaymentMethod.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="450.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.payment_controller">
+<AnchorPane prefHeight="450.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaymentMethod">
    <children>
       <Label layoutX="298.0" layoutY="21.0" prefHeight="30.0" prefWidth="204.0" text="payment method" textFill="#3509e4">
          <font>
